--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,8 @@
 
 <div class="content" role="main">
 
-  <div class="" style="margin-right: 100%; width: 100%;">
+  <!-- <div class="" style="margin-right: 100%; width: 100%;"> -->
+  <div class="" style="width: 100%;">
     <div class="" >
     <router-outlet>
       <div class="login">
